# sway-resize

./: README.md  meson.build
protocol/: meson.build
src/: main.c  render.c  render.h  resize_params.c  resize_params.h  state.h  sway_ipc.c  sway_ipc.h  sway_win.c  sway_win.h  test_resize_params.c  utils.c  utils.h
